[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/level_two/stage2_Ark.gd" type="Script" id=1]

[node name="MainNode" type="Node2D"]
script = ExtResource( 1 )

[node name="UIV" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 12.0
margin_right = 111.0
margin_bottom = 136.0

[node name="WelcomeLabel" type="Label" parent="UIV"]
margin_right = 126.0
margin_bottom = 14.0
text = "Welcome"

[node name="Spacer" type="Control" parent="UIV"]
margin_top = 18.0
margin_right = 126.0
margin_bottom = 38.0
rect_min_size = Vector2( 20, 20 )

[node name="UIH1" type="HBoxContainer" parent="UIV"]
margin_top = 42.0
margin_right = 126.0
margin_bottom = 110.0

[node name="VBoxColumn1" type="VBoxContainer" parent="UIV/UIH1"]
margin_right = 46.0
margin_bottom = 68.0

[node name="Label_PVT_Surface_Area" type="Label" parent="UIV/UIH1/VBoxColumn1"]
margin_right = 46.0
margin_bottom = 14.0
text = "PVT"

[node name="Label_PV_Efficiency" type="Label" parent="UIV/UIH1/VBoxColumn1"]
margin_top = 18.0
margin_right = 46.0
margin_bottom = 32.0
text = "PV"

[node name="Label_Heat_Pump_COP" type="Label" parent="UIV/UIH1/VBoxColumn1"]
margin_top = 36.0
margin_right = 46.0
margin_bottom = 50.0
text = "Heat"

[node name="Label_Battery_Efficiency" type="Label" parent="UIV/UIH1/VBoxColumn1"]
margin_top = 54.0
margin_right = 46.0
margin_bottom = 68.0
text = "Battery"

[node name="Control" type="Control" parent="UIV/UIH1"]
margin_left = 50.0
margin_right = 70.0
margin_bottom = 68.0
rect_min_size = Vector2( 20, 20 )

[node name="VBoxColumn2" type="VBoxContainer" parent="UIV/UIH1"]
margin_left = 74.0
margin_right = 125.0
margin_bottom = 68.0

[node name="Label_Outside_Temp" type="Label" parent="UIV/UIH1/VBoxColumn2"]
margin_right = 51.0
margin_bottom = 14.0
text = "Outside"

[node name="Label_Solar_Radiation" type="Label" parent="UIV/UIH1/VBoxColumn2"]
margin_top = 18.0
margin_right = 51.0
margin_bottom = 32.0
text = "Solar"

[node name="Label_Electricity_Consumption" type="Label" parent="UIV/UIH1/VBoxColumn2"]
margin_top = 36.0
margin_right = 51.0
margin_bottom = 50.0
text = "Cons1"

[node name="Label_Heat_Consumption" type="Label" parent="UIV/UIH1/VBoxColumn2"]
margin_top = 54.0
margin_right = 51.0
margin_bottom = 68.0
text = "Cons2"

[node name="Spacer2" type="Control" parent="UIV"]
margin_top = 114.0
margin_right = 126.0
margin_bottom = 134.0
rect_min_size = Vector2( 20, 20 )

[node name="UIH2" type="HBoxContainer" parent="UIV"]
margin_top = 138.0
margin_right = 126.0
margin_bottom = 190.0

[node name="VBoxColumn1" type="VBoxContainer" parent="UIV/UIH2"]
margin_right = 64.0
margin_bottom = 52.0

[node name="Label_Energy_Produced" type="Label" parent="UIV/UIH2/VBoxColumn1"]
margin_right = 64.0
margin_bottom = 14.0
text = "UsrEnergy"

[node name="Label_Heat_Produced" type="Label" parent="UIV/UIH2/VBoxColumn1"]
margin_top = 18.0
margin_right = 64.0
margin_bottom = 32.0
text = "UsrHear"

[node name="VBoxColumn2" type="VBoxContainer" parent="UIV/UIH2"]
margin_left = 68.0
margin_right = 126.0
margin_bottom = 52.0

[node name="LineEdit_Energy_Produced" type="LineEdit" parent="UIV/UIH2/VBoxColumn2"]
margin_right = 58.0
margin_bottom = 24.0

[node name="LineEdit_Heat_Produced" type="LineEdit" parent="UIV/UIH2/VBoxColumn2"]
margin_top = 28.0
margin_right = 58.0
margin_bottom = 52.0

[node name="Score_Feedback" type="Label" parent="UIV"]
margin_top = 194.0
margin_right = 126.0
margin_bottom = 208.0
text = "Waiting for answer"

[node name="SubmitButton" type="Button" parent="UIV"]
margin_top = 212.0
margin_right = 126.0
margin_bottom = 232.0
text = "Submit"

[node name="Score_Meter" type="Label" parent="UIV"]
margin_top = 236.0
margin_right = 126.0
margin_bottom = 250.0
text = "Score: 0"

[node name="Timer" type="Timer" parent="UIV"]
wait_time = 30.0
one_shot = true

[node name="TimerLabel" type="Label" parent="UIV"]
margin_top = 254.0
margin_right = 126.0
margin_bottom = 268.0

[node name="Debug_1" type="Label" parent="UIV"]
margin_top = 272.0
margin_right = 126.0
margin_bottom = 286.0
text = "Debug"

[node name="Debug_2" type="Label" parent="UIV"]
margin_top = 290.0
margin_right = 126.0
margin_bottom = 304.0
text = "Debug 2"

[connection signal="pressed" from="UIV/SubmitButton" to="." method="_on_SubmitButton_pressed"]
[connection signal="timeout" from="UIV/Timer" to="." method="_on_Timer_timeout"]
